--- a/.google/cloudbuild/deploy.yaml
+++ b/.google/cloudbuild/deploy.yaml
@@ -4,7 +4,7 @@ steps:
       - cp
       - '-r'
       - >-
-        gs://hx_ontology-extender/2022-09-23-09:05:53/ontology/children/Refrigerator/family/
+        gs://hx_ontology-extender/2022-09-23-09:05:53/ontology/family/
       - data/
     entrypoint: gsutil
   - name: gcr.io/cloud-builders/docker
@@ -38,8 +38,10 @@ steps:
     entrypoint: gcloud
 images:
   - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
+timeout: 60m
 options:
   substitutionOption: ALLOW_LOOSE
+  machineType: 'E2_HIGHCPU_8'
 substitutions:
   _GCR_HOSTNAME: us.gcr.io
   _PLATFORM: managed
