--- a/.google/cloudbuild/deploy.yaml
+++ b/.google/cloudbuild/deploy.yaml
@@ -41,6 +41,7 @@ images:
 timeout: 60m
 options:
   substitutionOption: ALLOW_LOOSE
+  machineType: 'E2_HIGHCPU_8'
 substitutions:
   _GCR_HOSTNAME: us.gcr.io
   _PLATFORM: managed
