--- a/.google/cloudbuild/deploy.yaml
+++ b/.google/cloudbuild/deploy.yaml
@@ -4,7 +4,7 @@ steps:
       - cp
       - '-r'
       - >-
-        gs://hx_ontology-extender/2022-09-23-09:05:53/ontology/children/Aerator/family/
+        gs://hx_ontology-extender/2022-09-23-09:05:53/ontology/family/
       - data/
     entrypoint: gsutil
   - name: gcr.io/cloud-builders/docker
