--- a/.google/cloudbuild/deploy.yaml
+++ b/.google/cloudbuild/deploy.yaml
@@ -7,6 +7,11 @@ steps:
         gs://hx_ontology-extender/2022-09-23-09:05:53/ontology/family/
       - data/
     entrypoint: gsutil
+  - name: 'ubuntu'
+    args:
+      - rm
+      - -R
+      - data/
   - name: gcr.io/cloud-builders/docker
     args:
       - build
