--- a/.google/cloudbuild/deploy.yaml
+++ b/.google/cloudbuild/deploy.yaml
@@ -4,7 +4,7 @@ steps:
       - cp
       - '-r'
       - >-
-        gs://hx_ontology-extender/2022-11-11-13:58:05/ontology/family/
+        gs://hx_ontology-extender/extended_ontology/2022-12-08-16:49:53/family/        
       - data/
     entrypoint: gsutil
   - name: gcr.io/cloud-builders/docker
