--- a/.google/cloudbuild/deploy.yaml
+++ b/.google/cloudbuild/deploy.yaml
@@ -3,8 +3,7 @@ steps:
     args:
       - cp
       - '-r'
-      - >-
-        gs://hx_ontology-extender/extended_ontology/2022-12-08-16:49:53/family/        
+      - 'gs://hx_ontology-extender/extended_ontology/2022-12-08-16:49:53/family/'        
       - data/
     entrypoint: gsutil
   - name: gcr.io/cloud-builders/docker
