--- a/.google/cloudbuild/deploy.yaml
+++ b/.google/cloudbuild/deploy.yaml
@@ -37,10 +37,10 @@ steps:
     entrypoint: gcloud
 images:
   - '$_LOCATION-docker.pkg.dev/$_ARTIFACT_REGISTRY_PROJECT_ID/$_REPOSITORY/$_IMAGE:$COMMIT_SHA'
-timeout: 60m
+timeout: 180m
 options:
   substitutionOption: ALLOW_LOOSE
-  machineType: 'E2_HIGHCPU_8'
+  # machineType: 'E2_HIGHCPU_8'
 substitutions:
   _GCR_HOSTNAME: us.gcr.io
   _PLATFORM: managed
