--- a/.google/cloudbuild/deploy.yaml
+++ b/.google/cloudbuild/deploy.yaml
@@ -40,7 +40,9 @@ images:
 timeout: 180m
 options:
   substitutionOption: ALLOW_LOOSE
-  # machineType: 'E2_HIGHCPU_8'
+  machineType: 'N1_HIGHCPU_8'
+  diskSizeGb: '200'
+
 substitutions:
   _GCR_HOSTNAME: us.gcr.io
   _PLATFORM: managed
